crates/ladder_types/tests/ui/generated/should_fail/test__unary_wrapper_ladder__R2_minus_R0.stderr
error[E0277]: cannot subtract `RelativeTo<()>` from `RelativeTo<RelativeTo<RelativeTo<()>>>`
 --> tests/ui/generated/should_fail/test__unary_wrapper_ladder__R2_minus_R0.rs:5:22
  |
5 |    let _ = R2::new() - R0::new();
  |                      ^ no implementation for `RelativeTo<RelativeTo<RelativeTo<()>>> - RelativeTo<()>`
  |
  = help: the trait `Sub<RelativeTo<()>>` is not implemented for `RelativeTo<RelativeTo<RelativeTo<()>>>`
  = help: the following other types implement trait `Sub<Rhs>`:
            <RelativeTo<R> as Sub<RelativeTo<RelativeTo<R>>>>
            <RelativeTo<R> as Sub>
